<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/total_bill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bill_message"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/total_bill_input"
        app:layout_constraintEnd_toStartOf="@+id/center_guideline" />

    <EditText
        android:id="@+id/total_bill_input"
        android:layout_width="100sp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/center_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_message"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tip_input"
        app:layout_constraintEnd_toStartOf="@+id/center_guideline" />

    <EditText
        android:id="@+id/tip_input"
        android:layout_width="100sp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/total_bill_input" />

    <TextView
        android:id="@+id/num_people_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_people_message"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/num_people_input"
        app:layout_constraintEnd_toStartOf="@+id/center_guideline" />

    <EditText
        android:id="@+id/num_people_input"
        android:layout_width="100sp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tip_input" />


    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculate_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_people_input" />

    <TextView
        android:id="@+id/total_per_person_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/total_per_person_message"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/total_per_person_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

    <TextView
        android:id="@+id/total_per_person_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/total_per_person_text"
        app:layout_constraintEnd_toStartOf="@+id/center_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/total_per_person_text"
        app:layout_constraintTop_toTopOf="@+id/total_per_person_text" />

</androidx.constraintlayout.widget.ConstraintLayout>